TODO
* expose libfusn_record_read in API

20160829
* worked on tests

20160106
* 2016 update

20150902
* fix in definitions

20150104
* 2015 update

20141021
* worked on stand-alone version

20141018
* changes for deployment

20141012
* worked on utility scripts

20141004
* Created stand-alone version of version used in libfsclfs
