@@ -1,6 +1,9 @@
 TODO
 * expose libfusn_record_read in API
 
+20161031
+* worked on tests
+
 20160829
 * worked on tests
 
